--- a/03-Orchestration/3.4/prefect.yaml
+++ b/03-Orchestration/3.4/prefect.yaml
@@ -1,7 +1,7 @@
 # File for configuring project / deployment build, push and pull steps
 
 # Generic metadata about this project
-name: 03-Orchestration
+name: '3.4'
 prefect-version: 2.10.8
 
 # build section allows you to manage and build docker images
